# restore-sway-layout

./: .gitignore  README.md  capture  kitty-with-recording  pyproject.toml  restore  restore-all-snapshot-sessions  restore-all-vim-sessions  restore-all-zsh-sessions  restore-vim-session  restore-zsh-session  snapshot  start-session  vimrc-snapshot  zshrc-snapshot
recover/swayutil/: __init__.py
recover/vim/: __init__.py
recover/zsh/: __init__.py
shell-scripts/: remove-snapshot-dir-command
src/recover/: __init__.py
src/recover/firefox/: __init__.py
src/recover/generic/: __init__.py
src/recover/main/relocate/: __init__.py
src/recover/main/relocate_one/: __main__.py
src/recover/main/snapshot/: __init__.py
src/recover/util/: __init__.py
src/recover/vim/: __init__.py
src/recover/zsh/: __init__.py
src/restore_sway_layout/: __init__.py
src/restore_sway_layout/firefox/: __init__.py
src/restore_sway_layout/generic/: __init__.py
src/restore_sway_layout/main/ctl/: __init__.py
src/restore_sway_layout/main/daemon/: __init__.py
src/restore_sway_layout/main/relocate/: __init__.py
src/restore_sway_layout/main/relocate_one/: __main__.py
src/restore_sway_layout/main/restart/: __init__.py
src/restore_sway_layout/main/snapshot/: __init__.py
src/restore_sway_layout/swayutil/: __init__.py
src/restore_sway_layout/types/: __init__.py
src/restore_sway_layout/util/: __init__.py  sway_foot_log.py  tk_log.py
src/restore_sway_layout/vim/: __init__.py
src/restore_sway_layout/zsh/: __init__.py
