[project]
name = "restore_sway_layout"
version = "0.0.1"
authors = [
  { name="Dylan Thinnes", email="dylan.thinnes@protonmail.com" },
]
description = "Restore the layout of your windows in the sway window manager."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'dbus-fast ~= 2.24.2',
    'ijson ~= 3.3.0',
    'psutil ~= 5.9.0',
    'typing-extensions ~= 4.12.2',
]

[project.urls]
Homepage = "https://github.com/dylan-thinnes/restore-sway-layout"
Issues = "https://github.com/dylan-thinnes/restore-sway-layout/issues"

[project.scripts]
restore-sway-layout = "restore_sway_layout:main"

[tool.mypy]
disable_error_code = [
    'import-untyped'
]
check_untyped_defs = true
